--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ android {
 
 dependencies {
 
+
+    implementation 'com.github.qandeelabbassi:Dropsy:1.1'
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
