--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,20 @@
         android:theme="@style/Theme.AppCompat.DayNight"
         tools:targetApi="31">
         <activity
-            android:name=".ui.RegistrationFrom"
-            android:theme="@style/Theme.MaterialComponents"
-            android:windowSoftInputMode="adjustPan"
+            android:name=".ForgetPassword"
             android:exported="false" />
+        <activity
+            android:name=".ui.RegistrationFrom"
+            android:exported="false"
+            android:theme="@style/Theme.MaterialComponents"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.Login"
             android:exported="false" />
         <activity
             android:name=".ui.SplashScreen"
-            android:noHistory="true"
-            android:exported="true">
+            android:exported="true"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
