--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,8 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+    implementation 'com.github.GoodieBag:Pinview:v1.5'
+
+
 }
