--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.AppCompat.DayNight"
         tools:targetApi="31">
         <activity
-            android:name=".ui.ForgetPassword"
+            android:name=".ForgetPassword"
             android:exported="false" />
         <activity
             android:name=".ui.RegistrationFrom"
