--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ android {
 dependencies {
 
 
+    implementation 'com.github.VishnuSivadasVS:Advanced-HttpURLConnection:1.2'
     implementation 'com.github.qandeelabbassi:Dropsy:1.1'
     implementation "com.github.skydoves:powerspinner:1.2.6"
     implementation 'androidx.core:core-ktx:1.8.0'
