--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,11 +79,8 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
+    implementation platform('com.google.firebase:firebase-bom:31.5.0')
 
-
-
-
-
-
+    implementation 'com.google.firebase:firebase-analytics'
 
 }
