--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -28,7 +29,7 @@
             android:name=".ui.ForgetPassword"
             android:exported="false" />
         <activity
-            android:name=".ui.RegistrationFrom"
+            android:name=".ui.RegistrationForm"
             android:exported="false"
             android:theme="@style/Theme.MaterialComponents"
             android:windowSoftInputMode="adjustPan" />
@@ -46,6 +47,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+<!--        firebase-->
 
         <meta-data
             android:name="preloaded_fonts"
