--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,9 @@ android {
 dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.github.sharish:ShimmerRecyclerView:v1.3'
+    implementation 'com.github.techinessoverloaded:progress-dialog:1.5.1'
     implementation 'com.google.firebase:firebase-messaging-directboot:23.1.2'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
