--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,25 +55,18 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.github.sharish:ShimmerRecyclerView:v1.3'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
-    implementation 'com.github.techinessoverloaded:progress-dialog:1.5.1'
+    implementation 'com.tbuonomo:dotsindicator:4.3'
+    implementation 'com.github.GoodieBag:Pinview:v1.5'
+    implementation 'com.intuit.sdp:sdp-android:1.1.0'
+    implementation "com.github.skydoves:powerspinner:1.2.6"
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.25'
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation 'com.github.VishnuSivadasVS:Advanced-HttpURLConnection:1.2'
     implementation 'com.google.firebase:firebase-messaging-directboot:23.1.2'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'androidx.navigation:navigation-ui:2.5.3'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
-    implementation platform('com.google.firebase:firebase-bom:31.5.0')
-    implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.github.GoodieBag:Pinview:v1.5'
-    implementation 'com.intuit.sdp:sdp-android:1.1.0'
-    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.25'
-    implementation 'com.github.bumptech.glide:glide:4.14.2'
-
-    implementation 'com.github.VishnuSivadasVS:Advanced-HttpURLConnection:1.2'
-
-    implementation 'com.github.qandeelabbassi:Dropsy:1.1'
-    implementation "com.github.skydoves:powerspinner:1.2.6"
     implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.1'
@@ -83,7 +76,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.gms:play-services-tasks:18.0.2'
     testImplementation 'junit:junit:4.13.2'
