--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
     buildFeatures {
         compose true
         viewBinding true
+        dataBinding true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.3.2'
