--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ android {
 
 dependencies {
 
+
+    implementation 'com.saadahmedev.popup-dialog:popup-dialog:1.0.2'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.github.sharish:ShimmerRecyclerView:v1.3'
