--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,13 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".ui.ui.myaddress.MyAddresses"
+            android:name=".ui.ui.profile.mypayments.MyPaymentsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.ui.profile.myorders.MyOrdersActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.ui.profile.myaddress.MyAddresses"
             android:exported="false" />
         <activity
             android:name=".ui.ui.search.SearchPage"
