--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ android {
 dependencies {
 
 
+    implementation 'com.github.patgdut:RadioRealButton:v2.1.2'
     implementation 'com.saadahmedev.popup-dialog:popup-dialog:1.0.2'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -79,9 +80,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.5.3'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation 'androidx.activity:activity-compose:1.7.1'
+    implementation 'androidx.activity:activity-compose:1.7.2'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
